3.4/_sources/gui/index.rst.txt


gui
===================================

.. toctree::
   :maxdepth: 4
   :caption: gui:

   CadCapacities
   CharacterWidget
   Filters
   Flags
   LayerType
   QgisInterface
   Qgs25DRendererWidget
   QgsAbstractDataSourceWidget
   QgsAbstractProcessingParameterWidgetWrapper
   QgsActionMenu
   QgsAdvancedDigitizingCanvasItem
   QgsAdvancedDigitizingDockWidget
   QgsAggregateToolButton
   QgsArrowSymbolLayerWidget
   QgsAttributeDialog
   QgsAttributeEditorContext
   QgsAttributeForm
   QgsAttributeFormEditorWidget
   QgsAttributeFormInterface
   QgsAttributeFormRelationEditorWidget
   QgsAttributeFormWidget
   QgsAttributeTableAction
   QgsAttributeTableDelegate
   QgsAttributeTableFilterModel
   QgsAttributeTableMapLayerAction
   QgsAttributeTableModel
   QgsAttributeTableView
   QgsAttributeTypeLoadDialog
   QgsAuthAuthoritiesEditor
   QgsAuthCertEditors
   QgsAuthCertInfo
   QgsAuthCertInfoDialog
   QgsAuthCertManager
   QgsAuthCertTrustPolicyComboBox
   QgsAuthConfigEditor
   QgsAuthConfigSelect
   QgsAuthConfigUriEdit
   QgsAuthEditorWidgets
   QgsAuthIdentitiesEditor
   QgsAuthImportCertDialog
   QgsAuthImportIdentityDialog
   QgsAuthMethodEdit
   QgsAuthMethodPlugins
   QgsAuthServersEditor
   QgsAuthSettingsWidget
   QgsAuthSslConfigDialog
   QgsAuthSslConfigWidget
   QgsAuthSslErrorsDialog
   QgsAuthSslImportDialog
   QgsAuthTrustedCAsDialog
   QgsBlendModeComboBox
   QgsBlurWidget
   QgsBrowserDockWidget
   QgsBrowserTreeView
   QgsBrushStyleComboBox
   QgsBusyIndicatorDialog
   QgsCategorizedSymbolRendererWidget
   QgsCentroidFillSymbolLayerWidget
   QgsCharacterSelectorDialog
   QgsCheckableComboBox
   QgsCheckboxSearchWidgetWrapper
   QgsCodeEditor
   QgsCodeEditorCSS
   QgsCodeEditorExpression
   QgsCodeEditorHTML
   QgsCodeEditorPython
   QgsCodeEditorSQL
   QgsCollapsibleGroupBox
   QgsCollapsibleGroupBoxBasic
   QgsColorBox
   QgsColorBrewerColorRampDialog
   QgsColorBrewerColorRampWidget
   QgsColorButton
   QgsColorDialog
   QgsColorEffectWidget
   QgsColorPreviewWidget
   QgsColorRampButton
   QgsColorRampShaderWidget
   QgsColorRampWidget
   QgsColorSchemeList
   QgsColorSchemeModel
   QgsColorSliderWidget
   QgsColorSwatchDelegate
   QgsColorSwatchGrid
   QgsColorSwatchGridAction
   QgsColorTextWidget
   QgsColorWheel
   QgsColorWidget
   QgsColorWidgetAction
   QgsCompoundColorWidget
   QgsConfigureShortcutsDialog
   QgsCptCityColorRampDialog
   QgsCredentialDialog
   QgsCurveEditorWidget
   QgsCustomDropHandler
   QgsCustomLayerOrderWidget
   QgsDashSpaceDialog
   QgsDataDefinedRotationDialog
   QgsDataDefinedSizeDialog
   QgsDataDefinedSizeLegendWidget
   QgsDataDefinedValueDialog
   QgsDataDefinedWidthDialog
   QgsDateTimeEdit
   QgsDateTimeSearchWidgetWrapper
   QgsDefaultSearchWidgetWrapper
   QgsDetailedItemData
   QgsDetailedItemDelegate
   QgsDetailedItemWidget
   QgsDial
   QgsDialog
   QgsDockWidget
   QgsDoubleSpinBox
   QgsDrawSourceWidget
   QgsDualView
   QgsEditorConfigWidget
   QgsEditorWidgetAutoConfPlugin
   QgsEditorWidgetFactory
   QgsEditorWidgetRegistry
   QgsEditorWidgetWrapper
   QgsEffectDrawModeComboBox
   QgsEffectStackCompactWidget
   QgsEffectStackPropertiesDialog
   QgsEffectStackPropertiesWidget
   QgsEllipseSymbolLayerWidget
   QgsEncodingFileDialog
   QgsEncodingSelectionDialog
   QgsErrorDialog
   QgsExpressionBuilderDialog
   QgsExpressionBuilderWidget
   QgsExpressionHighlighter
   QgsExpressionItem
   QgsExpressionItemSearchProxy
   QgsExpressionLineEdit
   QgsExpressionSelectionDialog
   QgsExtentGroupBox
   QgsExternalResourceWidget
   QgsFeatureListComboBox
   QgsFeatureListModel
   QgsFeatureListView
   QgsFeatureListViewDelegate
   QgsFeatureModel
   QgsFeatureSelectionDlg
   QgsFeatureSelectionModel
   QgsFieldComboBox
   QgsFieldConditionalFormatWidget
   QgsFieldExpressionWidget
   QgsFieldValidator
   QgsFieldValuesLineEdit
   QgsFileDownloaderDialog
   QgsFileWidget
   QgsFilledMarkerSymbolLayerWidget
   QgsFilterLineEdit
   QgsFloatingWidget
   QgsFocusWatcher
   QgsFontButton
   QgsFontMarkerSymbolLayerWidget
   QgsFormAnnotation
   QgsGeometryGeneratorSymbolLayerWidget
   QgsGeometryRubberBand
   QgsGlowWidget
   QgsGradientColorRampDialog
   QgsGradientFillSymbolLayerWidget
   QgsGradientStopEditor
   QgsGraduatedHistogramWidget
   QgsGraduatedSymbolRendererWidget
   QgsGroupBoxCollapseButton
   QgsGroupWmsDataDialog
   QgsGui
   QgsHeatmapRendererWidget
   QgsHelp
   QgsHighlight
   QgsHillshadeRendererWidget
   QgsHistogramWidget
   QgsIFeatureSelectionManager
   QgsIdentifyMenu
   QgsInvertedPolygonRendererWidget
   QgsKeyValueWidget
   QgsLUDialog
   QgsLayerPropertiesWidget
   QgsLayerTreeEmbeddedConfigWidget
   QgsLayerTreeEmbeddedWidgetProvider
   QgsLayerTreeEmbeddedWidgetRegistry
   QgsLayerTreeMapCanvasBridge
   QgsLayerTreeView
   QgsLayerTreeViewDefaultActions
   QgsLayerTreeViewIndicator
   QgsLayerTreeViewMenuProvider
   QgsLayoutConfigObject
   QgsLayoutCustomDropHandler
   QgsLayoutDesignerInterface
   QgsLayoutItemAbstractGuiMetadata
   QgsLayoutItemBaseWidget
   QgsLayoutItemComboBox
   QgsLayoutItemGuiGroup
   QgsLayoutItemGuiRegistry
   QgsLayoutItemPropertiesDialog
   QgsLayoutItemPropertiesWidget
   QgsLayoutRuler
   QgsLayoutUnitsComboBox
   QgsLayoutView
   QgsLayoutViewEllipticalRubberBand
   QgsLayoutViewMenuProvider
   QgsLayoutViewMouseEvent
   QgsLayoutViewRectangularRubberBand
   QgsLayoutViewRubberBand
   QgsLayoutViewTool
   QgsLayoutViewToolAddItem
   QgsLayoutViewToolAddNodeItem
   QgsLayoutViewToolEditNodes
   QgsLayoutViewToolMoveItemContent
   QgsLayoutViewToolPan
   QgsLayoutViewToolSelect
   QgsLayoutViewToolTemporaryKeyPan
   QgsLayoutViewToolTemporaryKeyZoom
   QgsLayoutViewToolTemporaryMousePan
   QgsLayoutViewToolZoom
   QgsLayoutViewTriangleRubberBand
   QgsLegendFilterButton
   QgsLimitedRandomColorRampDialog
   QgsLimitedRandomColorRampWidget
   QgsLinePatternFillSymbolLayerWidget
   QgsListWidget
   QgsLocatorWidget
   QgsLongLongValidator
   QgsManageConnectionsDialog
   QgsMapCanvas
   QgsMapCanvasAnnotationItem
   QgsMapCanvasItem
   QgsMapCanvasSnappingUtils
   QgsMapCanvasTracer
   QgsMapLayerAction
   QgsMapLayerActionRegistry
   QgsMapLayerComboBox
   QgsMapLayerConfigWidget
   QgsMapLayerConfigWidgetFactory
   QgsMapLayerStyleManagerWidget
   QgsMapMouseEvent
   QgsMapOverviewCanvas
   QgsMapTip
   QgsMapTool
   QgsMapToolAdvancedDigitizing
   QgsMapToolCapture
   QgsMapToolEdit
   QgsMapToolEmitPoint
   QgsMapToolExtent
   QgsMapToolIdentify
   QgsMapToolIdentifyFeature
   QgsMapToolPan
   QgsMapToolZoom
   QgsMapUnitScaleDialog
   QgsMapUnitScaleWidget
   QgsMarkerLineSymbolLayerWidget
   QgsMenuHeader
   QgsMenuHeaderWidgetAction
   QgsMessageBar
   QgsMessageBarItem
   QgsMessageLogViewer
   QgsMessageViewer
   QgsMetadataWidget
   QgsMultiBandColorRendererWidget
   QgsMultiEditToolButton
   QgsNewAuxiliaryFieldDialog
   QgsNewAuxiliaryLayerDialog
   QgsNewGeoPackageLayerDialog
   QgsNewHttpConnection
   QgsNewMemoryLayerDialog
   QgsNewNameDialog
   QgsNewVectorLayerDialog
   QgsNullSymbolRendererWidget
   QgsOWSSourceSelect
   QgsOpacityWidget
   QgsOptionsDialogBase
   QgsOptionsDialogHighlightButton
   QgsOptionsDialogHighlightCheckBox
   QgsOptionsDialogHighlightGroupBox
   QgsOptionsDialogHighlightLabel
   QgsOptionsDialogHighlightTree
   QgsOptionsDialogHighlightWidget
   QgsOptionsPageWidget
   QgsOptionsWidgetFactory
   QgsOrderByDialog
   QgsOrganizeTableColumnsDialog
   QgsPaintEffectPropertiesWidget
   QgsPaintEffectWidget
   QgsPalettedRendererWidget
   QgsPanelWidget
   QgsPanelWidgetStack
   QgsPanelWidgetWrapper
   QgsPasswordLineEdit
   QgsPenCapStyleComboBox
   QgsPenJoinStyleComboBox
   QgsPenStyleComboBox
   QgsPixmapLabel
   QgsPluginManagerInterface
   QgsPointClusterRendererWidget
   QgsPointDisplacementRendererWidget
   QgsPointPatternFillSymbolLayerWidget
   QgsPresetColorRampDialog
   QgsPresetColorRampWidget
   QgsPreviewEffect
   QgsProcessingAlgorithmConfigurationWidget
   QgsProcessingAlgorithmConfigurationWidgetFactory
   QgsProcessingAlgorithmDialogBase
   QgsProcessingContextGenerator
   QgsProcessingGui
   QgsProcessingGuiRegistry
   QgsProcessingModelerParameterWidget
   QgsProcessingParameterWidgetContext
   QgsProcessingParameterWidgetFactoryInterface
   QgsProcessingRecentAlgorithmLog
   QgsProcessingToolboxModel
   QgsProcessingToolboxModelAlgorithmNode
   QgsProcessingToolboxModelGroupNode
   QgsProcessingToolboxModelNode
   QgsProcessingToolboxModelProviderNode
   QgsProcessingToolboxModelRecentNode
   QgsProcessingToolboxProxyModel
   QgsProcessingToolboxTreeView
   QgsProjectionSelectionDialog
   QgsProjectionSelectionTreeWidget
   QgsProjectionSelectionWidget
   QgsPropertyAssistantWidget
   QgsPropertyOverrideButton
   QgsProxyStyle
   QgsQmlWidgetWrapper
   QgsQueryBuilder
   QgsRasterBandComboBox
   QgsRasterFillSymbolLayerWidget
   QgsRasterFormatSaveOptionsWidget
   QgsRasterHistogramWidget
   QgsRasterLayerSaveAsDialog
   QgsRasterMinMaxWidget
   QgsRasterPyramidsOptionsWidget
   QgsRasterRendererWidget
   QgsRasterTransparencyWidget
   QgsRatioLockButton
   QgsRelationAggregateSearchWidgetWrapper
   QgsRelationEditorWidget
   QgsRelationReferenceSearchWidgetWrapper
   QgsRelationReferenceWidget
   QgsRelationReferenceWidgetWrapper
   QgsRelationWidgetWrapper
   QgsRendererPropertiesDialog
   QgsRendererRasterPropertiesWidget
   QgsRendererRulePropsDialog
   QgsRendererRulePropsWidget
   QgsRendererWidget
   QgsRubberBand
   QgsRuleBasedRendererModel
   QgsRuleBasedRendererWidget
   QgsSVGFillSymbolLayerWidget
   QgsScaleComboBox
   QgsScaleRangeWidget
   QgsScaleVisibilityDialog
   QgsScaleWidget
   QgsScrollArea
   QgsSearchQueryBuilder
   QgsSearchWidgetToolButton
   QgsSearchWidgetWrapper
   QgsShadowEffectWidget
   QgsShapeburstFillSymbolLayerWidget
   QgsShortcutsManager
   QgsSimpleFillSymbolLayerWidget
   QgsSimpleLineSymbolLayerWidget
   QgsSimpleMarkerSymbolLayerWidget
   QgsSingleBandGrayRendererWidget
   QgsSingleBandPseudoColorRendererWidget
   QgsSingleSymbolRendererWidget
   QgsSlider
   QgsSmartGroupCondition
   QgsSmartGroupEditorDialog
   QgsSnapIndicator
   QgsSnapToGridCanvasItem
   QgsSourceSelectProvider
   QgsSourceSelectProviderRegistry
   QgsSpinBox
   QgsStatusBar
   QgsStyleExportImportDialog
   QgsStyleGroupSelectionDialog
   QgsStyleManagerDialog
   QgsStyleSaveDialog
   QgsSublayersDialog
   QgsSubstitutionListDialog
   QgsSubstitutionListWidget
   QgsSvgMarkerSymbolLayerWidget
   QgsSvgSelectorDialog
   QgsSvgSelectorGroupsModel
   QgsSvgSelectorListModel
   QgsSvgSelectorWidget
   QgsSvgSourceLineEdit
   QgsSymbolButton
   QgsSymbolLayerWidget
   QgsSymbolLevelsDialog
   QgsSymbolLevelsWidget
   QgsSymbolSelectorDialog
   QgsSymbolSelectorWidget
   QgsSymbolWidgetContext
   QgsSymbolsListWidget
   QgsTabWidget
   QgsTableWidgetBase
   QgsTableWidgetItem
   QgsTaskManagerWidget
   QgsTextFormatDialog
   QgsTextFormatPanelWidget
   QgsTextFormatWidget
   QgsTextPreview
   QgsTransformWidget
   QgsTreeWidgetItem
   QgsTreeWidgetItemObject
   QgsUnitSelectionWidget
   QgsUserInputWidget
   QgsVScrollArea
   QgsValueMapSearchWidgetWrapper
   QgsValueRelationSearchWidgetWrapper
   QgsVariableEditorWidget
   QgsVectorFieldSymbolLayerWidget
   QgsVertexMarker
   QgsWidgetWrapper
   QgsWindowManagerInterface
   QtCore
   Targets
